hasqd/tests/coptest/usr/ab/hsl/neg/fid_hsl_ag_re.sts
#!/bin/sh

# HSL: agent filesys

in=$(basename $0)
in=${in%.*} 

$1/hasqd -lqnxc dprn=1 dsvt=0 dagt=1 tcp_port=13131 s=$in.inp
